--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,4 +1,8 @@
 <div>
+    <a href="{% url 'make_post' %}">Make Post </a>
+</div>
+
+<div>
 
     {% for post in object_list %}
         <p>{{post.title}}</p>
