--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "nav.html" %}
+{% extends 'nav.html' %}
 
 {% block content %}
 
@@ -11,10 +11,11 @@
     {% for post in object_list %}
         <p>{{post.title}}</p>
         <a href="{% url 'post_detail' post.pk %}">
-            <img src="{{ post.image }}">
+            <img src="{{ post.image }}" width=200 height=200>
         </a>   
     {% endfor %}
 
 </div>
+
 
 {% endblock content %}
