--- a/templates/update_post.html
+++ b/templates/update_post.html
@@ -1,3 +1,7 @@
+{% extends "index.html" %}
+
+{% block content %}
+
 <h1> Update Post </h1>
 
 <form action="" method="post">
@@ -5,3 +9,5 @@
     {{form.as_p}}
     <button type="submit"> Update </button>
 </form>
+
+{% endblock content %}
