--- a/templates/delete_post.html
+++ b/templates/delete_post.html
@@ -1,3 +1,7 @@
+{% extends 'nav.html' %}
+
+{% block content %}
+
 <h1> Delete Post </h1>
 
 <form action="" method="post">
@@ -5,3 +9,5 @@
     <p> Are you sure you want to delete {{object.title}}</p>
     <button type="submit"> Confirm delete </button>
 </form>
+
+{% endblock content %}
