--- a/templates/make_post.html
+++ b/templates/make_post.html
@@ -1,3 +1,7 @@
+{% extends 'nav.html' %}
+
+{% block content %}
+
 <h1> New Post </h1>
 
 <form action="" method="post" enctype="multipart/form-data">
@@ -5,3 +9,5 @@
     {{form.as_p}}
     <button type="submit"> Save </button>
 </form>
+
+{% endblock content %}
