--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,3 +1,7 @@
+{% extends 'nav.html' %}
+
+{% block content %}
+
 <h1> Login </h1>
 
 <form method="post">
@@ -5,3 +9,5 @@
     {{form.as_p}}
     <button type="submit"> Login </button>
 </form>
+
+{% endblock content %}
