--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,3 +1,7 @@
+{% extends "index.html" %}
+
+{% block content %}
+
 <h1> Sign up </h1>
 
 <form method="post">
@@ -5,3 +9,5 @@
     {{form.as_p}}
     <button type="submit"> Sign up </button>
 </form>
+
+{% endblock content %}
