--- a/templates/index.html
+++ b/templates/index.html
@@ -2,19 +2,44 @@
 
 {% block content %}
 
-<div>
-    <a href="{% url 'make_post' %}">Make Post </a>
-</div>
-
-<div>
-
+<div class="cards-listing">
     {% for post in object_list %}
-        <p>{{post.title}}</p>
-        <a href="{% url 'post_detail' post.pk %}">
-            <img src="{{ post.image }}" width=200 height=200>
-        </a>   
+        <div class="row">
+            <div class="card view-update {{ post.pk }}">
+                <div class="card__panel-head">
+                    <div class="poster__info">
+                        <a href="{% url 'home' %}" class="poster__name">
+                            {% if post.author.profile_pic %}
+                                <img class="poster__profilepic" src="{{ post.author.profile_pic }}">
+                            {% endif %}
+                            {{ post.author.username }}
+                        </a>
+                    </div>
+                </div>
+                <a href="{% url 'post_detail' post.pk %}">
+                    <img class="card__main-image" src="{{ post.image.url }}">
+                </a>
+                <div class="card__panel-body">
+                    <div class="likes">
+                        {% if post.get_like_count %}
+                            {{ post.get_like_count }} like{% if post.get_like_count > 1 %}s{% endif %}
+                        {% endif %}
+                    </div>
+                    <ul class="comment-list">
+                        <a class="view-more"></a>
+                        {% for comment in post.comments.all %}
+                        <li class="comment-list__comment">
+                            <a href="{% url 'home'%}" class="user">
+                                {{ comment.user.username }}
+                            </a>
+                            <span class="comment">{{ comment.comment }}</span>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
     {% endfor %}
-
 </div>
 
 
