--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                         <a class="view-more"></a>
                         {% for comment in post.comments.all %}
                         <li class="comment-list__comment">
-                            <a href="{% url 'home'%}" class="user">
+                            <a href="{% url 'user_profile' comment.user.id %}" class="user">
                                 {{ comment.user.username }}
                             </a>
                             <span class="comment">{{ comment.comment }}</span>
